force-app/main/default/objects/Material__c/fields/MaterialForm__c.field-meta.xml
<CustomField>
    <fullName>MaterialForm__c</fullName>
    <label>Material Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>