force-app/main/default/objects/Material__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <label>Material Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>