force-app/main/default/objects/Material__c/fields/MessageDateTime__c.field-meta.xml
<CustomField>
    <fullName>MessageDateTime__c</fullName>
    <label>Message Date/Time</label>
    <type>DateTime</type>
</CustomField>