force-app/main/default/objects/Material__c/fields/MinimumRemainingShelfLife__c.field-meta.xml
<CustomField>
    <fullName>MinimumRemainingShelfLife__c</fullName>
    <label>Minimum Remaining Shelf Life</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>