force-app/main/default/objects/Material__c/fields/NationalDrugCodeNDC__c.field-meta.xml
<CustomField>
    <fullName>NationalDrugCodeNDC__c</fullName>
    <label>National Drug Code (NDC)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>