force-app/main/default/objects/Material__c/fields/Round_Rule__c.field-meta.xml
<CustomField>
    <fullName>Round_Rule__c</fullName>
    <description>Rounding Rule fed from SAP. The value currently being stored in this field will provide no added functionality for Cell Chain Link, but may be used in the future.</description>
    <label>Round Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>