force-app/main/default/objects/Material__c/fields/ShelfLife__c.field-meta.xml
<CustomField>
    <fullName>ShelfLife__c</fullName>
    <label>Shelf Life</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>