force-app/main/default/objects/Material__c/fields/ShelfLifeMeasuringUnit__c.field-meta.xml
<CustomField>
    <fullName>ShelfLifeMeasuringUnit__c</fullName>
    <label>Shelf Life Measuring Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>