force-app/main/default/objects/Material__c/fields/StorageCondition__c.field-meta.xml
<CustomField>
    <fullName>StorageCondition__c</fullName>
    <label>Storage Condition</label>
    <type>TextArea</type>
</CustomField>