force-app/main/default/objects/Material__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APH</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>PP1</fullName>
            </value>
            <value>
                <fullName>PP2</fullName>
            </value>
            <value>
                <fullName>FP1</fullName>
            </value>
            <value>
                <fullName>FP2</fullName>
            </value>
            <value>
                <fullName>FP3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>