force-app/main/default/objects/Material__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NC/Kg</fullName>
            </value>
            <value>
                <fullName>TNC</fullName>
            </value>
            <value>
                <fullName>mL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>