force-app/main/default/objects/Material__c/recordTypes/BOM.recordType-meta.xml
<RecordType>
    <fullName>BOM</fullName>
    <active>true</active>
    <label>BOM</label>
</RecordType>