force-app/main/default/objects/Material__c/recordTypes/Material.recordType-meta.xml
<RecordType>
    <fullName>Material</fullName>
    <active>true</active>
    <label>Material</label>
</RecordType>